--- a/src/mycv/html/index.html
+++ b/src/mycv/html/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <a target="_new" href="JamesShaneCV.pdf" class="btn btn-danger download-template" role="button" aria-disabled="true">
-        <i class="far fa-file-pdf"></i>Download
+        <i class="far fa-file-pdf fa-refresh fa-spin"></i>Download
         CV</a>
     </div>
   </nav>
